--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.0.3",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
